@@ -26,7 +26,7 @@
  * This is mod_delay, contrib software for proftpd 1.2.10 and above.
  * For more information contact TJ Saunders <tj@castaglia.org>.
  *
- * $Id: mod_delay.c,v 1.32 2009-04-06 22:32:21 castaglia Exp $
+ * $Id: mod_delay.c,v 1.33 2009-04-14 18:45:53 castaglia Exp $
  */
 
 #include "conf.h"
@@ -67,6 +67,10 @@
 # define DELAY_SESS_NVALUES		16
 #endif
 
+#ifndef DELAY_NPROTO
+# define DELAY_NPROTO			4
+#endif
+
 #if defined(PR_USE_CTRLS)
 static ctrls_acttab_t delay_acttab[];
 #endif /* PR_USE_CTRLS */
@@ -75,12 +79,17 @@ extern xaset_t *server_list;
 
 module delay_module;
 
+struct delay_vals_rec {
+  char dv_proto[16];
+  unsigned int dv_nvals;
+  long dv_vals[DELAY_NVALUES];
+};
+
 struct delay_rec {
   unsigned int d_sid;
   char d_addr[80];
   unsigned int d_port;
-  unsigned int d_nvals;
-  long d_vals[DELAY_NVALUES];
+  struct delay_vals_rec d_vals[DELAY_NPROTO];
 };
 
 struct {
@@ -176,13 +185,16 @@ static long delay_select_k(unsigned long k, array_header *values) {
   return -1;
 }
 
-static long delay_get_median(pool *p, unsigned int rownum, long interval) {
+static long delay_get_median(pool *p, unsigned int rownum, const char *protocol,
+    long interval) {
   register unsigned int i;
   struct delay_rec *row;
+  struct delay_vals_rec *dv = NULL;
   long *tab_vals;
   array_header *list = make_array(p, 1, sizeof(long));
   
-  /* Calculate the median value of the current command's recorded values.
+  /* Calculate the median value of the current command's recorded values,
+   * taking the protocol (e.g. "ftp", "ftps", "ssh2") into account.
    *
    * When calculating the median, we use the current interval as well
    * as the recorded intervals in the table, giving us an odd number of
@@ -195,12 +207,20 @@ static long delay_get_median(pool *p, unsigned int rownum, long interval) {
    */
 
   row = &((struct delay_rec *) delay_tab.dt_data)[rownum];
-  tab_vals = row->d_vals;
+
+  /* Find the list of delay values that match the given protocol. */
+  for (i = 0; i < DELAY_NPROTO; i++) {
+    dv = &(row->d_vals[i]);
+    if (strcmp(dv->dv_proto, protocol) == 0) {
+      tab_vals = dv->dv_vals;
+      break;
+    }
+  }
 
   /* Start at the end of the row and work backward, as values are
    * always added at the end of the row, shifting everything to the left.
    */
-  for (i = 1; i < row->d_nvals; i++)
+  for (i = 1; i < dv->dv_nvals; i++)
     *((long *) push_array(list)) = tab_vals[DELAY_NVALUES - i];
   *((long *) push_array(list)) = interval;
 
@@ -265,19 +285,30 @@ static void delay_delay(long interval) {
   delay_signals_unblock();
 }
 
-static void delay_table_add_interval(unsigned int rownum, long interval) {
+static void delay_table_add_interval(unsigned int rownum, const char *protocol,
+    long interval) {
+  register unsigned int i;
   struct delay_rec *row;
+  struct delay_vals_rec *dv = NULL;
 
   row = &((struct delay_rec *) delay_tab.dt_data)[rownum];
 
+  for (i = 0; i < DELAY_NPROTO; i++) {
+    dv = &(row->d_vals[i]);
+    if (strcmp(dv->dv_proto, protocol) == 0) {
+      break;
+    }
+  }
+
   /* Shift all existing values to the left one position. */
-  memmove(&(row->d_vals[0]), &(row->d_vals[1]),
+  memmove(&(dv->dv_vals[0]), &(dv->dv_vals[1]),
     sizeof(long) * (DELAY_NVALUES - 1));
 
   /* Add the given value to the end. */
-  row->d_vals[DELAY_NVALUES-1] = interval;
-  if (row->d_nvals < DELAY_NVALUES)
-    row->d_nvals++;
+  dv->dv_vals[DELAY_NVALUES-1] = interval;
+  if (dv->dv_nvals < DELAY_NVALUES) {
+    dv->dv_nvals++;
+  }
 }
 
 static int delay_table_init(void) {
@@ -588,22 +619,59 @@ static void delay_table_reset(void) {
 
   for (s = (server_rec *) server_list->xas_list; s; s = s->next) {
     unsigned int i = s->sid - 1;
+    struct delay_rec *row;
+    struct delay_vals_rec *dv;
 
     /* Row for USER values */
-    struct delay_rec *row = &((struct delay_rec *) delay_tab.dt_data)[i];
+    row = &((struct delay_rec *) delay_tab.dt_data)[i];
     row->d_sid = s->sid;
     sstrncpy(row->d_addr, pr_netaddr_get_ipstr(s->addr), sizeof(row->d_addr));
     row->d_port = s->ServerPort;
-    row->d_nvals = 0;
     memset(row->d_vals, 0, sizeof(row->d_vals));
+
+    /* Initialize value subsets for "ftp", "ftps", and "ssh2". */
+    dv = &(row->d_vals[0]);
+    memset(dv->dv_proto, 0, sizeof(dv->dv_proto));
+    sstrcat(dv->dv_proto, "ftp", sizeof(dv->dv_proto));
+    dv->dv_nvals = 0;
+    memset(dv->dv_vals, 0, sizeof(dv->dv_vals));
+
+    dv = &(row->d_vals[1]);
+    memset(dv->dv_proto, 0, sizeof(dv->dv_proto));
+    sstrcat(dv->dv_proto, "ftps", sizeof(dv->dv_proto));
+    dv->dv_nvals = 0;
+    memset(dv->dv_vals, 0, sizeof(dv->dv_vals));
+
+    dv = &(row->d_vals[2]);
+    memset(dv->dv_proto, 0, sizeof(dv->dv_proto));
+    sstrcat(dv->dv_proto, "ssh2", sizeof(dv->dv_proto));
+    dv->dv_nvals = 0;
+    memset(dv->dv_vals, 0, sizeof(dv->dv_vals));
 
     /* Row for PASS values */
     row = &((struct delay_rec *) delay_tab.dt_data)[i + 1];
     row->d_sid = s->sid;
     sstrncpy(row->d_addr, pr_netaddr_get_ipstr(s->addr), sizeof(row->d_addr));
     row->d_port = s->ServerPort;
-    row->d_nvals = 0;
     memset(row->d_vals, 0, sizeof(row->d_vals));
+
+    dv = &(row->d_vals[0]);
+    memset(dv->dv_proto, 0, sizeof(dv->dv_proto));
+    sstrcat(dv->dv_proto, "ftp", sizeof(dv->dv_proto));
+    dv->dv_nvals = 0;
+    memset(dv->dv_vals, 0, sizeof(dv->dv_vals));
+
+    dv = &(row->d_vals[1]);
+    memset(dv->dv_proto, 0, sizeof(dv->dv_proto));
+    sstrcat(dv->dv_proto, "ftps", sizeof(dv->dv_proto));
+    dv->dv_nvals = 0;
+    memset(dv->dv_vals, 0, sizeof(dv->dv_vals));
+
+    dv = &(row->d_vals[2]);
+    memset(dv->dv_proto, 0, sizeof(dv->dv_proto));
+    sstrcat(dv->dv_proto, "ssh2", sizeof(dv->dv_proto));
+    dv->dv_nvals = 0;
+    memset(dv->dv_vals, 0, sizeof(dv->dv_vals));
   }
 
   return;
@@ -746,59 +814,88 @@ static int delay_handle_info(pr_ctrls_t *ctrl, int reqargc,
   for (s = (server_rec *) server_list->xas_list; s; s = s->next) {
     unsigned int r = s->sid - 1;
     register unsigned int i;
+    struct delay_rec *row;
  
     /* Row for USER values */
-    struct delay_rec *row = &((struct delay_rec *) delay_tab.dt_data)[r];
-    pr_ctrls_add_response(ctrl, "Address %s#%u: %u USER values (usecs):",
-      row->d_addr, row->d_port, row->d_nvals);
+    row = &((struct delay_rec *) delay_tab.dt_data)[r];
+    pr_ctrls_add_response(ctrl, "Address %s#%u: USER values (usecs):",
+      row->d_addr, row->d_port);
 
-    /* Start at the end of the row and work backward, as values are
-     * always added at the end of the row, shifting everything to the left.
-     */
-    vals = "";
-    for (i = 1; i < row->d_nvals; i++) {
-      char buf[80];
+    for (i = 0; i < DELAY_NPROTO; i++) {
+      struct delay_vals_rec *dv;
+      register unsigned int j;
 
-      memset(buf, '\0', sizeof(buf));
-      snprintf(buf, sizeof(buf)-1, "%10ld", row->d_vals[DELAY_NVALUES - i]);
+      dv = &(row->d_vals[i]);
 
-      vals = pstrcat(tmp_pool, vals, " ", buf, NULL);
-
-      if (i != 0 &&
-          i % 4 == 0) {
-        pr_ctrls_add_response(ctrl, "  %s", vals);
-        vals = "";
+      if ((dv->dv_proto)[0] == '\0') {
+        continue;
       }
-    }
 
-    if (strlen(vals) > 0)
-      pr_ctrls_add_response(ctrl, "  %s", vals);
+      pr_ctrls_add_response(ctrl, " + Protocol %s, %u values:", dv->dv_proto,
+        dv->dv_nvals);
+
+      /* Start at the end of the row and work backward, as values are
+       * always added at the end of the row, shifting everything to the left.
+       */
+      vals = "";
+      for (j = 0; j < dv->dv_nvals; j++) {
+        char buf[80];
+
+        memset(buf, '\0', sizeof(buf));
+        snprintf(buf, sizeof(buf)-1, "%10ld", dv->dv_vals[DELAY_NVALUES - j]);
+
+        vals = pstrcat(tmp_pool, vals, " ", buf, NULL);
+
+        if (j != 0 &&
+            j % 4 == 0) {
+          pr_ctrls_add_response(ctrl, "    %s", vals);
+          vals = "";
+        }
+      }
+
+      if (strlen(vals) > 0)
+        pr_ctrls_add_response(ctrl, "    %s", vals);
+    }
 
     pr_ctrls_add_response(ctrl, "%s", "");
 
     /* Row for PASS values */
     row = &((struct delay_rec *) delay_tab.dt_data)[r + 1];
-    pr_ctrls_add_response(ctrl, "Address %s#%u: %u PASS values (usecs):",
-      row->d_addr, row->d_port, row->d_nvals);
+    pr_ctrls_add_response(ctrl, "Address %s#%u: PASS values (usecs):",
+      row->d_addr, row->d_port);
 
-    vals = "";
-    for (i = 1; i < row->d_nvals; i++) {
-      char buf[80];
+    for (i = 0; i < DELAY_NPROTO; i++) {
+      struct delay_vals_rec *dv;
+      register unsigned int j;
 
-      memset(buf, '\0', sizeof(buf));
-      snprintf(buf, sizeof(buf)-1, "%10ld", row->d_vals[DELAY_NVALUES - i]);
+      dv = &(row->d_vals[i]);
 
-      vals = pstrcat(tmp_pool, vals, " ", buf, NULL);
-
-      if (i != 0 &&
-          i % 4 == 0) {
-        pr_ctrls_add_response(ctrl, "  %s", vals);
-        vals = "";
+      if ((dv->dv_proto)[0] == '\0') {
+        continue;
       }
-    }
 
-    if (strlen(vals) > 0)
-      pr_ctrls_add_response(ctrl, "  %s", vals);
+      pr_ctrls_add_response(ctrl, " + Protocol %s, %u values:", dv->dv_proto,
+        dv->dv_nvals);
+
+      vals = "";
+      for (j = 0; j < dv->dv_nvals; j++) {
+        char buf[80];
+
+        memset(buf, '\0', sizeof(buf));
+        snprintf(buf, sizeof(buf)-1, "%10ld", dv->dv_vals[DELAY_NVALUES - j]);
+
+        vals = pstrcat(tmp_pool, vals, " ", buf, NULL);
+
+        if (j != 0 &&
+            j % 4 == 0) {
+          pr_ctrls_add_response(ctrl, "    %s", vals);
+          vals = "";
+        }
+      }
+
+      if (strlen(vals) > 0)
+        pr_ctrls_add_response(ctrl, "    %s", vals);
+    }
   }
   pr_ctrls_add_response(ctrl, "%s", "");
 
@@ -988,6 +1085,7 @@ MODRET delay_post_pass(cmd_rec *cmd) {
   struct timeval tv;
   unsigned int rownum;
   long interval, median;
+  const char *proto;
 
   if (!delay_engine)
     return PR_DECLINED(cmd);
@@ -1020,8 +1118,10 @@ MODRET delay_post_pass(cmd_rec *cmd) {
   interval = (tv.tv_sec - delay_tv.tv_sec) * 1000000 +
     (tv.tv_usec - delay_tv.tv_usec);
 
+  proto = pr_session_get_protocol(0);
+
   /* Get the median interval value. */
-  median = delay_get_median(cmd->tmp_pool, rownum, interval);
+  median = delay_get_median(cmd->tmp_pool, rownum, proto, interval);
 
   /* Add the interval to the table. Only allow a single session to
    * add a portion of the cache size, to prevent a single client from
@@ -1029,7 +1129,7 @@ MODRET delay_post_pass(cmd_rec *cmd) {
    */
   if (delay_npass < (DELAY_NVALUES / DELAY_SESS_NVALUES)) {
     pr_trace_msg("delay", 8, "adding %ld usecs to PASS row", interval);
-    delay_table_add_interval(rownum, interval);
+    delay_table_add_interval(rownum, proto, interval);
     delay_npass++;
 
   } else {
@@ -1068,6 +1168,7 @@ MODRET delay_post_user(cmd_rec *cmd) {
   struct timeval tv;
   unsigned int rownum;
   long interval, median;
+  const char *proto;
 
   if (!delay_engine)
     return PR_DECLINED(cmd);
@@ -1098,8 +1199,10 @@ MODRET delay_post_user(cmd_rec *cmd) {
   interval = (tv.tv_sec - delay_tv.tv_sec) * 1000000 +
     (tv.tv_usec - delay_tv.tv_usec);
 
+  proto = pr_session_get_protocol(0);
+
   /* Get the median interval value. */
-  median = delay_get_median(cmd->tmp_pool, rownum, interval);
+  median = delay_get_median(cmd->tmp_pool, rownum, proto, interval);
 
   /* Add the interval to the table. Only allow a single session to
    * add a portion of the cache size, to prevent a single client from
@@ -1107,14 +1210,15 @@ MODRET delay_post_user(cmd_rec *cmd) {
    */
   if (delay_nuser < (DELAY_NVALUES / DELAY_SESS_NVALUES)) {
     pr_trace_msg("delay", 8, "adding %ld usecs to USER row", interval);
-    delay_table_add_interval(rownum, interval);
+    delay_table_add_interval(rownum, proto, interval);
     delay_nuser++;
 
-  } else
+  } else {
     /* Generate an event, in case a module (i.e. mod_ban) might want
      * to do something appropriate to such an ill-behaved client.
      */
     pr_event_generate("mod_delay.max-user", session.c);
+  }
 
   /* Done with the table. */
   delay_table_unlock(rownum);
